--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -35,3 +35,12 @@ h3 {
   line-height: 32px;
 }
 
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.2s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
